--- a/test/BUILD.gn
+++ b/test/BUILD.gn
@@ -903,27 +903,18 @@ if (!is_android) {
     check_includes = false
 
     deps = [
-      ":brave_browser_tests_assets",
-      ":brave_browser_tests_java",
-      ":sync_integration_test_support",
-      ":sync_integration_test_support_java",
-      ":test_support_java",
-      "//build:chromeos_buildflags",
       "//chrome:chrome_android_core",
       "//chrome/android:app_hooks_java",
       "//chrome/browser/flags:flags_android",
       "//chrome/browser/metrics:test_support",
-      "//chrome/browser/payments:browser_tests",
-      "//chrome/browser/privacy_budget:browser_tests",
-      "//chrome/browser/profiling_host:profiling_browsertests",
-      "//chrome/browser/webaudio:browser_tests",
+      "//chrome/test:android_browsertests_assets",
+      "//chrome/test:android_browsertests_java",
       "//chrome/test:browser_tests_runner",
       "//chrome/test:test_support",
       "//chrome/test:test_support_ui_android",
       "//components/browser_ui/widget/android:java",
-      "//components/crash/android:crashpad_main",
-      "//components/externalauth/android:google_delegate_public_impl_java",
       "//components/metrics/demographics:test_support",
+      "//components/externalauth/android:google_delegate_public_impl_java",
       "//components/page_load_metrics/browser:test_support",
       "//components/page_load_metrics/browser/observers/ad_metrics:test_support",
       "//components/ukm:ukm_test_helper",
@@ -937,24 +928,88 @@ if (!is_android) {
       "//testing/android/native_test:native_test_support",
     ]
 
+    # There are three types of tests that needs to be rewritten for Android:
+    # 1. using extensions
+    # 2. using desktop specific UI elements (e.g. TabStripModelObserver)
+    # 3. using ui_test_utils.h
     sources = [
-      "//chrome/browser/android/customtabs/custom_tabs_browsertest.cc",
-      "//chrome/browser/android/tab_android_browsertest.cc",
-      "//chrome/browser/android/webapk/webapk_icon_hasher_browsertest.cc",
-      "//chrome/browser/browsing_data/access_context_audit_browsertest.cc",
-      "//chrome/browser/engagement/important_sites_util_browsertest.cc",
-      "//chrome/browser/metrics/metrics_service_user_demographics_browsertest.cc",
-      "//chrome/browser/metrics/ukm_browsertest.cc",
-      "//chrome/browser/net/cert_verify_proc_browsertest.cc",
-      "//chrome/browser/page_load_metrics/observers/ad_metrics/ad_density_intervention_android_browsertest.cc",
-      "//chrome/browser/profiles/profile_browsertest_android.cc",
-      "//chrome/browser/safe_browsing/test_safe_browsing_database_helper.cc",
-      "//chrome/browser/safe_browsing/test_safe_browsing_database_helper.h",
-      "//chrome/browser/ssl/chrome_security_state_client_browsertest.cc",
-      "//chrome/browser/ssl/crlset_browsertest.cc",
-      "//chrome/browser/subresource_filter/subresource_filter_browser_test_harness.cc",
-      "//chrome/browser/subresource_filter/subresource_filter_browser_test_harness.h",
-      "//chrome/browser/ui/autofill/payments/offer_notification_infobar_controller_impl_browsertest.cc",
+      "//brave/app/brave_main_delegate_browsertest.cc",
+      "//brave/app/brave_main_delegate_runtime_flags_browsertest.cc",
+      #"//brave/browser/brave_content_browser_client_browsertest.cc",
+      "//brave/browser/brave_prefs_browsertest.cc",
+      "//brave/browser/brave_resources_browsertest.cc",
+      #"//brave/browser/brave_scheme_load_browsertest.cc",
+      #"//brave/browser/brave_search/brave_search_browsertest.cc",
+      #"//brave/browser/brave_shields/ad_block_service_browsertest.cc",
+      #"//brave/browser/brave_shields/ad_block_service_browsertest.h",
+      #"//brave/browser/brave_shields/brave_shields_web_contents_observer_browsertest.cc",
+      "//brave/browser/brave_shields/cookie_pref_service_browsertest.cc",
+      #"//brave/browser/brave_shields/domain_block_page_browsertest.cc",
+      "//brave/browser/brave_stats/brave_stats_updater_browsertest.cc",
+      #"//brave/browser/devtools/brave_devtools_ui_bindings_browsertest.cc",
+      #"//brave/browser/extensions/api/brave_shields_api_browsertest.cc",
+      #"//brave/browser/extensions/api/brave_theme_api_browsertest.cc",
+      #"//brave/browser/extensions/brave_base_local_data_files_browsertest.cc",
+      #"//brave/browser/extensions/brave_base_local_data_files_browsertest.h",
+      #"//brave/browser/extensions/brave_extension_functional_test.cc",
+      #"//brave/browser/extensions/brave_extension_functional_test.h",
+      #"//brave/browser/extensions/brave_extension_provider_browsertest.cc",
+      #"//brave/browser/extensions/brave_theme_event_router_browsertest.cc",
+      #"//brave/browser/net/brave_network_delegate_browsertest.cc",
+      #"//brave/browser/net/brave_network_delegate_hsts_fingerprinting_browsertest.cc",
+      #"//brave/browser/net/brave_site_hacks_network_delegate_helper_browsertest.cc",
+      "//brave/browser/net/brave_system_request_handler_browsertest.cc",
+      #"//brave/browser/net/global_privacy_control_network_delegate_helper_browsertest.cc",
+      #"//brave/browser/policy/brave_policy_browsertest.cc",
+      "//brave/browser/profiles/brave_bookmark_model_loaded_observer_browsertest.cc",
+      "//brave/browser/profiles/brave_profile_manager_browsertest.cc",
+      #"//brave/browser/renderer_context_menu/brave_mock_render_view_context_menu.cc",
+      #"//brave/browser/renderer_context_menu/brave_mock_render_view_context_menu.h",
+      #"//brave/browser/renderer_context_menu/brave_spelling_menu_observer_browsertest.cc",
+      #"//brave/browser/search_engines/search_engine_provider_service_browsertest.cc",
+      #"//brave/browser/search_engines/search_engine_tracker_browsertest.cc",
+      "//brave/browser/themes/brave_dark_mode_prefs_migration_browsertest.cc",
+      #"//brave/browser/themes/brave_theme_service_browsertest.cc",
+      #"//brave/browser/ui/bookmark/bookmark_tab_helper_browsertest.cc",
+      #"//brave/browser/ui/brave_browser_command_controller_browsertest.cc",
+      #"//brave/browser/ui/content_settings/brave_autoplay_blocked_image_model_browsertest.cc",
+      #"//brave/browser/ui/toolbar/brave_app_menu_model_browsertest.cc",
+      #"//brave/browser/ui/views/bookmarks/bookmark_bar_browsertest.cc",
+      #"//brave/browser/ui/views/brave_actions/brave_actions_container_browsertest.cc",
+      #"//brave/browser/ui/views/omnibox/brave_omnibox_view_views_browsertest.cc",
+      #"//brave/browser/ui/views/omnibox/omnibox_autocomplete_browsertest.cc",
+      #"//brave/browser/ui/views/profiles/brave_profile_menu_view_browsertest.cc",
+      #"//brave/browser/ui/views/tabs/brave_tab_context_menu_contents_browsertest.cc",
+      #"//brave/browser/ui/views/toolbar/brave_toolbar_view_browsertest.cc",
+      #"//brave/browser/ui/webui/brave_welcome_ui_browsertest.cc",
+      #"//brave/browser/ui/webui/new_tab_page/brave_new_tab_ui_browsertest.cc",
+      #"//brave/chromium_src/chrome/browser/media/router/media_router_feature_browsertest.cc",
+      #"//brave/chromium_src/chrome/browser/safe_browsing/download_protection/check_client_download_request_base_browsertest.cc",
+      #"//brave/chromium_src/chrome/browser/ui/views/location_bar/location_bar_view_browsertest.cc",
+      #"//brave/chromium_src/chrome/browser/ui/views/tabs/tab_hover_card_bubble_view_browsertest.cc",
+      "//brave/chromium_src/components/content_settings/core/browser/brave_content_settings_registry_browsertest.cc",
+      #"//brave/chromium_src/components/favicon/core/favicon_database_browsertest.cc",
+      #"//brave/chromium_src/third_party/blink/public/platform/disable_client_hints_browsertest.cc",
+      #"//brave/chromium_src/third_party/blink/renderer/core/frame/reporting_observer_browsertest.cc",
+      "//brave/common/brave_channel_info_browsertest.cc",
+      #"//brave/components/brave_shields/browser/https_everywhere_service_browsertest.cc",
+      "//brave/components/content_settings/renderer/brave_content_settings_agent_impl_autoplay_browsertest.cc",
+      #"//brave/components/content_settings/renderer/brave_content_settings_agent_impl_browsertest.cc",
+      "//brave/components/l10n/browser/locale_helper_mock.cc",
+      "//brave/components/l10n/browser/locale_helper_mock.h",
+      #"//brave/third_party/blink/renderer/modules/brave/navigator_browsertest.cc",
+      #"//chrome/browser/extensions/browsertest_util.cc",
+      #"//chrome/browser/extensions/browsertest_util.h",
+      #"//chrome/browser/extensions/extension_browsertest.cc",
+      #"//chrome/browser/extensions/extension_browsertest.h",
+      #"//chrome/browser/extensions/extension_function_test_utils.cc",
+      #"//chrome/browser/extensions/extension_function_test_utils.h",
+      #"//chrome/browser/media/media_browsertest.cc",
+      #"//chrome/browser/media/media_browsertest.h",
+      #"//chrome/browser/ui/test/test_browser_dialog.cc",
+      #"//chrome/browser/ui/test/test_browser_dialog.h",
+      #"//chrome/browser/ui/test/test_browser_ui.cc",
+      #"//chrome/browser/ui/test/test_browser_ui.h",
       "//chrome/test/android/browsertests_apk/android_browsertests_jni_onload.cc",
       "//chrome/test/base/android/android_browser_test_browsertest_android.cc",
     ]
@@ -979,79 +1034,16 @@ if (!is_android) {
       add_unwind_tables_in_apk = true
     }
 
-    if (enable_arcore) {
-      # If AR is supported, we should also include WebXR's AR enterprise policy
-      # browsertest. The test should not be enabled when AR features are not
-      # enabled, since we won't be able to distinguish whether the test cases
-      # are failing due to absence of AR, or due to an issue with propagating
-      # the enterprise policy setting.
-      sources += [ "../browser/android/vr/webxr_policy_browsertest.cc" ]
-    }
-
     data = [
+      "$root_out_dir/brave_100_percent.pak",
+      "$root_out_dir/brave_resources.pak",
       "$root_gen_dir/chrome/android/chrome_apk_paks/chrome_100_percent.pak",
       "$root_gen_dir/chrome/android/chrome_apk_paks/locales/en-US.pak",
       "$root_gen_dir/chrome/android/chrome_apk_paks/resources.pak",
       "$root_gen_dir/components/components_resources.pak",
       "$root_gen_dir/components/dev_ui_components_resources.pak",
       "$root_out_dir/browser_tests.pak",
-      "//components/test/data/ads_observer/",
-      "//components/test/data/payments/",
-      "//chrome/test/data/android/customtabs/",
-      "//chrome/test/data/banners/",
-      "//chrome/test/data/ssl/",
-      "//content/test/data/",
-    ]
-  }
-
-  android_assets("brave_browser_tests_assets") {
-    testonly = true
-    disable_compression = true
-    sources = []
-    deps = []
-
-    # These are grit() rules so they are in $root_gen_dir.
-    deps += [ "//components/resources" ]
-    sources += [
-      "$root_gen_dir/components/components_resources.pak",
-      "$root_gen_dir/components/dev_ui_components_resources.pak",
-    ]
-
-    # These are repack() rules so they are in $root_out_dir.
-    deps += [ "//chrome:browser_tests_pak" ]
-    sources += [ "$root_out_dir/browser_tests.pak" ]
-
-    # These are assets rules so we can just depend on them.
-    deps += [
-      "//chrome/android:chrome_apk_pak_assets",
-      "//third_party/icu:icu_assets",
-    ]
-
-    deps += [ "//v8:v8_external_startup_data_assets" ]
-  }
-
-  android_library("brave_browser_tests_java") {
-    testonly = true
-    deps = [
-      "//base:base_java",
-      "//base:base_java_test_support",
-      "//build/android/gtest_apk:native_test_instrumentation_test_runner_java",
-      "//chrome/android:base_module_java",
-      "//chrome/android:chrome_all_java",
-      "//chrome/browser/tabmodel:java",
-      "//components/crash/android:handler_java",
-      "//components/crash/android:java",
-      "//components/module_installer/android:module_installer_java",
-      "//content/public/android:content_java",
-      "//content/public/test/android:android_test_message_pump_support_java",
-      "//content/shell/android:content_shell_browsertests_java",
-      "//testing/android/native_test:native_test_java",
-      "//ui/android:ui_full_java",
-    ]
-    sources = [
-      "//chrome/test/android/browsertests_apk/src/org/chromium/android_browsertests_apk/ChromeBrowserTestsActivity.java",
-      "//chrome/test/android/browsertests_apk/src/org/chromium/android_browsertests_apk/ChromeBrowserTestsApplication.java",
-      "//chrome/test/android/browsertests_apk/src/org/chromium/android_browsertests_apk/ChromeBrowserTestsInstrumentationTestRunner.java",
+      "//brave/components/brave_perf_predictor/resources/entities-httparchive-nostats.json",
     ]
   }
 
@@ -1060,136 +1052,6 @@ if (!is_android) {
     input = "//chrome/test/android/browsertests_apk/AndroidManifest.xml.jinja2"
     output =
         "${target_gen_dir}/brave_browser_tests_manifest/AndroidManifest.xml"
-  }
-
-  android_library("test_support_java") {
-    testonly = true
-    deps = [
-      "//base:base_java",
-      "//chrome/android:chrome_all_java",
-      "//components/autofill/android:autofill_java",
-      "//components/payments/content/android:java",
-      "//components/payments/mojom:mojom_java",
-      "//content/public/android:content_java",
-      "//third_party/androidx:androidx_annotation_annotation_java",
-      "//third_party/blink/public/mojom:android_mojo_bindings_java",
-    ]
-    sources = [ "//chrome/test/android/test_support/src/org/chromium/chrome/test_support/PaymentRequestTestBridge.java" ]
-  }
-
-  generate_jni("test_support_jni_headers") {
-    testonly = true
-    sources = [ "//chrome/test/android/test_support/src/org/chromium/chrome/test_support/PaymentRequestTestBridge.java" ]
-  }
-
-  android_library("sync_integration_test_support_java") {
-    testonly = true
-    deps = [
-      "//base:base_java",
-      "//chrome/android:chrome_all_java",
-      "//chrome/browser/profiles/android:java",
-      "//chrome/test/android:chrome_java_test_support",
-      "//components/signin/public/android:java",
-      "//components/sync/android:sync_java",
-      "//content/public/test/android:content_java_test_support",
-      "//third_party/androidx:androidx_annotation_annotation_java",
-      "//third_party/junit",
-    ]
-    sources = [
-      "//chrome/android/javatests/src/org/chromium/chrome/browser/sync/AndroidSyncSettingsTestUtils.java",
-      "//chrome/android/javatests/src/org/chromium/chrome/browser/sync/MockSyncContentResolverDelegate.java",
-      "//chrome/android/javatests/src/org/chromium/chrome/browser/sync/SyncTestSigninUtils.java",
-    ]
-  }
-
-  source_set("sync_integration_test_support") {
-    testonly = true
-
-    # Skip for now because of non-public deps in //chrome/test
-    check_includes = false
-    sources = [
-      "//chrome/browser/sync/test/integration/autofill_helper.cc",
-      "//chrome/browser/sync/test/integration/autofill_helper.h",
-      "//chrome/browser/sync/test/integration/bookmarks_helper.cc",
-      "//chrome/browser/sync/test/integration/bookmarks_helper.h",
-      "//chrome/browser/sync/test/integration/configuration_refresher.cc",
-      "//chrome/browser/sync/test/integration/configuration_refresher.h",
-      "//chrome/browser/sync/test/integration/device_info_helper.cc",
-      "//chrome/browser/sync/test/integration/device_info_helper.h",
-      "//chrome/browser/sync/test/integration/encryption_helper.cc",
-      "//chrome/browser/sync/test/integration/encryption_helper.h",
-      "//chrome/browser/sync/test/integration/fake_server_invalidation_sender.cc",
-      "//chrome/browser/sync/test/integration/fake_server_invalidation_sender.h",
-      "//chrome/browser/sync/test/integration/fake_server_sync_invalidation_sender.cc",
-      "//chrome/browser/sync/test/integration/fake_server_sync_invalidation_sender.h",
-      "//chrome/browser/sync/test/integration/multi_client_status_change_checker.cc",
-      "//chrome/browser/sync/test/integration/multi_client_status_change_checker.h",
-      "//chrome/browser/sync/test/integration/offer_helper.cc",
-      "//chrome/browser/sync/test/integration/offer_helper.h",
-      "//chrome/browser/sync/test/integration/passwords_helper.cc",
-      "//chrome/browser/sync/test/integration/passwords_helper.h",
-      "//chrome/browser/sync/test/integration/profile_sync_service_harness.cc",
-      "//chrome/browser/sync/test/integration/profile_sync_service_harness.h",
-      "//chrome/browser/sync/test/integration/quiesce_status_change_checker.cc",
-      "//chrome/browser/sync/test/integration/quiesce_status_change_checker.h",
-      "//chrome/browser/sync/test/integration/retry_verifier.cc",
-      "//chrome/browser/sync/test/integration/retry_verifier.h",
-      "//chrome/browser/sync/test/integration/secondary_account_helper.cc",
-      "//chrome/browser/sync/test/integration/secondary_account_helper.h",
-      "//chrome/browser/sync/test/integration/single_client_status_change_checker.cc",
-      "//chrome/browser/sync/test/integration/single_client_status_change_checker.h",
-      "//chrome/browser/sync/test/integration/status_change_checker.cc",
-      "//chrome/browser/sync/test/integration/status_change_checker.h",
-      "//chrome/browser/sync/test/integration/sync_datatype_helper.cc",
-      "//chrome/browser/sync/test/integration/sync_datatype_helper.h",
-      "//chrome/browser/sync/test/integration/sync_disabled_checker.cc",
-      "//chrome/browser/sync/test/integration/sync_disabled_checker.h",
-      "//chrome/browser/sync/test/integration/sync_signin_delegate.cc",
-      "//chrome/browser/sync/test/integration/sync_signin_delegate.h",
-      "//chrome/browser/sync/test/integration/sync_test.cc",
-      "//chrome/browser/sync/test/integration/sync_test.h",
-      "//chrome/browser/sync/test/integration/typed_urls_helper.cc",
-      "//chrome/browser/sync/test/integration/typed_urls_helper.h",
-      "//chrome/browser/sync/test/integration/updated_progress_marker_checker.cc",
-      "//chrome/browser/sync/test/integration/updated_progress_marker_checker.h",
-      "//chrome/browser/sync/test/integration/wallet_helper.cc",
-      "//chrome/browser/sync/test/integration/wallet_helper.h",
-    ]
-    sources += [
-      "//chrome/browser/sync/test/integration/sync_signin_delegate_android.cc",
-      "//chrome/browser/sync/test/integration/sync_signin_delegate_android.h",
-      "//chrome/browser/sync/test/integration/sync_test_utils_android.cc",
-      "//chrome/browser/sync/test/integration/sync_test_utils_android.h",
-    ]
-    public_deps = [ "//chrome/browser" ]
-    deps = [
-      ":sync_integration_test_support_jni_headers",
-      "//base",
-      "//build:chromeos_buildflags",
-      "//chrome/test:test_support",
-      "//components/bookmarks/browser:test_support",
-      "//components/invalidation/impl",
-      "//components/invalidation/impl:test_support",
-      "//components/signin/public/identity_manager:test_support",
-      "//components/sync",
-      "//components/sync:test_support_model",
-      "//components/sync:test_support_nigori",
-      "//components/sync/test/fake_server",
-      "//components/sync/trusted_vault:test_support",
-      "//content/public/browser",
-      "//content/test:test_support",
-      "//net",
-      "//services/network/public/mojom",
-      "//skia",
-    ]
-  }
-
-  generate_jni("sync_integration_test_support_jni_headers") {
-    testonly = true
-    sources = [
-      "//chrome/android/javatests/src/org/chromium/chrome/browser/sync/AndroidSyncSettingsTestUtils.java",
-      "//chrome/android/javatests/src/org/chromium/chrome/browser/sync/SyncTestSigninUtils.java",
-    ]
   }
 }
 
